Fix images overflowing in blog when viewing in mobile

--- a/src/app/blog/blog-detail.component.css
+++ b/src/app/blog/blog-detail.component.css
@@ -24,6 +24,10 @@ a {
   text-decoration: none !important;
 }
 
+img {
+  max-width: 100%;
+}
+
 .post-wrap {
   margin: 0 auto;
   margin-left: auto;
